@@ -5,6 +5,9 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 
+import java.util.Objects;
+import java.util.List;
+
 /**
  * 배치작업 Repository Custom 구현체
  */
@@ -13,6 +16,6 @@ public class BatchOpertRepositoryImpl implements BatchOpertRepositoryCustom {
 
     @Override
     public Page<BatchOpert> searchBatchOperts(String searchCondition, String searchKeyword, Pageable pageable) {
-        return new PageImpl<>(java.util.Collections.emptyList(), pageable, 0);
+        return new PageImpl<>(Objects.requireNonNull(List.of()), Objects.requireNonNull(pageable), 0);
     }
 }
